# Ovecchia

./: .gitignore  .replit  app.py  bot_service.py  pyproject.toml  quick_test.py  replit.md  requirements.txt  requirements_telegram.txt  start_telegram_bot.py  telegram_bot.py  test_bot.py  test_connection.py
.github/workflows/: deploy.yml
attached_assets/: Pasted--Guia-de-Utiliza-o-An-lise-Individual-do-Ativo-O-que-a-An-lise-Individual-A--1753455923284_1753455923285.txt  Pasted--import-yfinance-as-yf-import-pandas-as-pd-import-numpy-as-np-import-plotly-graph-objects-as-go--1753047586558_1753047586559.txt  Pasted--st-markdown-f-Status-Atual-do-Mercado-Modelo-modelo-nome-col1-1755289556811_1755289556812.txt  Pasted-Connection-failed-with-status-502-and-response-DOCTYPE-html-html-lang-en-head-title-H-1753395257671_1753395257672.txt  Pasted-NOVA-CONDI-O-DO-SINAL-from-sklearn-ensemble-import-RandomForestClassifier-Par-metro-1754971937856_1754971937860.txt  Pasted-Pasted-st-markdown-f-Status-Atual-do-Mercado-Modelo-modelo-nome-col1-1755289556811-1755289556812-tx-1755289672988_1755289672988.txt  Pasted-Quero-habilitar-coleta-de-dados-de-mercado-pelo-MetaTrader-5-no-app-O-usu-rio-poder-escolher-em-c-1754936789310_1754936789312.txt  Pasted-binance-eos-list-ZRX-USDT-1INCH-USDT-AAVE-USDT-ADX-USDT-AI-1755103466021_1755103466025.txt  Pasted-def-calculate-ovelha-v10-signals-df-sma-short-60-sma-long-70-lookahead-3--1755214013892_1755214013893.txt  Pasted-import-MetaTrader5-as-mt5-import-pandas-as-pd-import-numpy-as-np-from-contextlib-import-contextma-1754936921554_1754936921555.txt
(+1 files in other folders)
